# devvcell_virtual_cell

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
config/: ablation_suite.json  niche_context.json
configs/: baselines.yaml  clone_native_Jindal_2023_NatureBiotechnology_LSK_RNA.yaml  clone_native_Weinreb_2020_Science.yaml  clone_outcome_preserving_native_Jindal_2023_NatureBiotechnology_LSK_RNA_clone_outcome_quality_native.yaml  clone_outcome_preserving_native_Jindal_2023_NatureBiotechnology_LSK_RNA_early_terminal_balanced_native.yaml  clone_outcome_preserving_native_Jindal_2023_NatureBiotechnology_LSK_RNA_fate_entropy_preserving_native.yaml  clone_outcome_preserving_native_Jindal_2023_NatureBiotechnology_LSK_RNA_max_outcome_quality_feasible_native.yaml  clone_outcome_preserving_native_Jindal_2023_NatureBiotechnology_LSK_RNA_terminal_outcome_preserving_native.yaml  clone_outcome_preserving_native_Weinreb_2020_Science_clone_outcome_quality_native.yaml  clone_outcome_preserving_native_Weinreb_2020_Science_early_terminal_balanced_native.yaml  clone_outcome_preserving_native_Weinreb_2020_Science_fate_entropy_preserving_native.yaml  clone_outcome_preserving_native_Weinreb_2020_Science_max_outcome_quality_feasible_native.yaml  clone_outcome_preserving_native_Weinreb_2020_Science_terminal_outcome_preserving_native.yaml  clone_stratified_native_Jindal_2023_NatureBiotechnology_LSK_RNA_cell_random_native.yaml  clone_stratified_native_Jindal_2023_NatureBiotechnology_LSK_RNA_clone_fate_balanced_native.yaml  data.yaml  discovery.yaml  model.yaml  (+22 more)
(+728 files in other folders)
