[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "devguard"
version = "0.1.0"
description = "Conformal developmental normality boundaries for perturbed mouse cells."
requires-python = ">=3.10"
dependencies = [
  "anndata",
  "h5py",
  "joblib",
  "matplotlib",
  "numpy",
  "pandas",
  "pyarrow",
  "scikit-learn",
  "scipy"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
