[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "swarmlineage-ot"
version = "0.2.0"
description = "Lineage-supervised finite-agent virtual-cell dynamics from single-cell OT pseudo-lineages."
requires-python = ">=3.10"
dependencies = [
  "anndata",
  "h5py",
  "joblib",
  "matplotlib",
  "numpy",
  "pandas",
  "pyarrow",
  "pyyaml",
  "scikit-learn",
  "scipy",
  "torch"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
